--- a/css/app.css
+++ b/css/app.css
@@ -3,9 +3,9 @@
 /* ------------------------------ */
 .hero-image {
   position: absolute;
-  right: 230px;
-  top: 80px;
-  z-index: -3; }
+  z-index: -3;
+  width: 100%;
+  height: 100%; }
 
 .hero {
   height: 100vh;
@@ -22,8 +22,10 @@
     clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%); }
     .hero .left .author {
       width: 35px;
-      display: block;
-      opacity: .8; }
+      display: inline;
+      opacity: .8;
+      padding-right: 25px;
+      padding-top: 15px; }
     .hero .left button {
       margin-top: 25px; }
     .hero .left .fa {
@@ -739,10 +741,10 @@ label > .label-body {
       .panel-ctas .panel .dribble .content {
         display: none; } }
 #animate-area {
-  background-image: url(pattern.png);
+  background-image: url(http://iamdonny.com/images/updatedstates.gif);
   background-position: 0px 0px;
   background-repeat: repeat-x;
-  animation: animatedBackground 40s linear infinite; }
+  animation: animatedBackground 20s linear infinite; }
 
 @keyframes animatedBackground {
   from {
@@ -786,9 +788,3 @@ body {
   /* currently ems cause chrome bug misinterpreting rems on body element */
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0; }
-
-.hero-image {
-  position: absolute;
-  right: 230px;
-  top: 80px;
-  z-index: -3; }
