--- a/scss/animation.scss
+++ b/scss/animation.scss
@@ -1,9 +1,9 @@
 #animate-area	{  
-	background-image: url(pattern.png);
+	background-image: url(http://iamdonny.com/images/updatedstates.gif);
 	background-position: 0px 0px;
 	background-repeat: repeat-x;
 
-	animation: animatedBackground 40s linear infinite;
+	animation: animatedBackground 20s linear infinite;
 }
 
 @keyframes animatedBackground {
