--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -1,8 +1,8 @@
 .hero-image {
 	position: absolute;
-	right: 230px;
-	top: 80px;
 	z-index: -3;
+	width: 100%;
+	height: 100%;
 }
 
 .hero {
@@ -44,8 +44,10 @@
 
  		.author {
  			width: 35px;
- 			display: block;
+ 			display: inline;
  			opacity: .8;
+ 			padding-right: 25px;
+ 			padding-top: 15px;
  		}
 
  		button {
