--- a/css/app.css
+++ b/css/app.css
@@ -14,7 +14,7 @@
     background: #03A9F4;
     padding-right: 100px;
     height: 100%;
-    padding-top: 10%;
+    padding-top: 13%;
     padding-left: 6rem;
     z-index: 3;
     position: fixed;
@@ -23,23 +23,21 @@
     .hero .left .cta {
       position: absolute;
       bottom: 0;
-      right: 0;
+      left: 0;
       background: none;
-      padding: 20px 25px 20px 20px;
-      width: 100%;
+      padding: 20px 25px 20px 0px;
+      width: 400px;
       z-index: 1;
       text-align: left; }
-      .hero .left .cta .social {
-        margin-left: 13px; }
-        .hero .left .cta .social a {
-          margin-left: 40px;
-          color: #fff;
-          opacity: .8;
-          transition: all ease .5s; }
-          .hero .left .cta .social a:hover {
-            opacity: 1; }
-        .hero .left .cta .social .fa {
-          font-size: 28px; }
+      .hero .left .cta .social a {
+        margin-left: 35px;
+        color: #fff;
+        opacity: .8;
+        transition: all ease .5s; }
+        .hero .left .cta .social a:hover {
+          opacity: 1; }
+      .hero .left .cta .social .fa {
+        font-size: 28px; }
     .hero .left .fa {
       font-size: 16px;
       color: #fff;
@@ -795,5 +793,5 @@ html {
 body {
   font-size: 1.5em;
   /* currently ems cause chrome bug misinterpreting rems on body element */
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Oxygen', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0; }
