--- a/scss/app.scss
+++ b/scss/app.scss
@@ -20,6 +20,6 @@ html {
 
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Oxygen', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
