--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -35,7 +35,7 @@
 		//     100%{background-position:0% 50%}
 		// }
 		height: 100%;
-		padding-top: 10%;
+		padding-top: 13%;
 		padding-left: 6rem;
 		z-index: 3;
 		position: fixed;
@@ -45,18 +45,17 @@
  		.cta {
  			position: absolute;
  			bottom: 0;
- 			right: 0;
+ 			left: 0;
  			background: none;
- 			padding: 20px 25px 20px 20px;
- 			width: 100%;
+ 			padding: 20px 25px 20px 0px;
+ 			width: 400px;
  			z-index: 1;
  			text-align: left;
 
  			.social {
- 				margin-left: 13px;
 
  				a {
- 					margin-left: 40px;
+ 					margin-left: 35px;
  					color: $white;
  					opacity: .8;
  					transition: all ease .5s;
