--- a/css/app.css
+++ b/css/app.css
@@ -5,8 +5,9 @@
   position: absolute;
   z-index: -3;
   width: 100%;
-  height: 100%;
-  opacity: .1; }
+  height: 45%;
+  opacity: .7;
+  bottom: 0; }
 
 .hero {
   height: 100vh;
@@ -784,7 +785,7 @@ label > .label-body {
   background-image: url(http://iamdonny.com/images/updatedstates.jpg);
   background-position: 0px 0px;
   background-repeat: repeat-x;
-  animation: animatedBackground 10s linear infinite; }
+  animation: animatedBackground 13s linear infinite; }
 
 @keyframes animatedBackground {
   from {
