--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -2,8 +2,9 @@
 	position: absolute;
 	z-index: -3;
 	width: 100%;
-	height: 100%;
-	opacity: .1;
+	height: 45%;
+	opacity: .7;
+	bottom: 0;
 }
 
 .hero {
